# olist-customer-intelligence

./: .gitignore  LICENSE  README.md  mlflow.db  pipeline.py  pyproject.toml
data/: kmeans_results.json
notebooks/: 01_churn_prediction.ipynb  02_customer_segmentation.ipynb  03_customer_value_scoring.ipynb  mlflow.db  sql_practice.ipynb
notebooks/mlartifacts/1/models/m-07ccde7beaae49beaf0a811d9be01753/artifacts/: MLmodel  model.ubj
notebooks/mlartifacts/1/models/m-150b0798110c4c97aa5a4b187f8da813/artifacts/: MLmodel
notebooks/mlartifacts/1/models/m-1caba933807d43ecad95eb2daab9a76f/artifacts/: MLmodel
notebooks/mlartifacts/1/models/m-6f69e8c77545468f9c1a411b8f025d0f/artifacts/: MLmodel
notebooks/mlartifacts/1/models/m-81d99a3290a34355ba6361a963929970/artifacts/: MLmodel  model.pkl
notebooks/mlartifacts/1/models/m-8f5d0c4c9cb44185b735ec0725a7f284/artifacts/: MLmodel  model.pkl
notebooks/mlartifacts/1/models/m-9c52685a41c74a63a59b7741952dec20/artifacts/: MLmodel
notebooks/mlartifacts/1/models/m-a5619c1189614f7a8f399fcf173c4bcf/artifacts/: MLmodel  model.pkl
notebooks/mlartifacts/1/models/m-b01a203469c7406a867d019a9f3b980f/artifacts/: MLmodel  conda.yaml  model.ubj
notebooks/mlartifacts/1/models/m-c2f19404058f4e51bb0c17e740cdc15d/artifacts/: MLmodel  model.pkl
olist_pipeline/: .user.yml  dbt_project.yml  profiles.yml
olist_pipeline/models/marts/: customer_features.sql
olist_pipeline/models/staging/: schema.yml  sources.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql
(+15 files in other folders)
