[project]
name = "olist-customer-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.2",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.2.0",
    "llvmlite>=0.39.0",
    "matplotlib>=3.10.9",
    "mlflow>=3.12.0",
    "numba>=0.56.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "prefect>=3.7.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.44.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
